--- a/src/layout/main.html
+++ b/src/layout/main.html
@@ -1,12 +1,11 @@
 <main> 
     
-    <!-- <img src="assets/images/desktop/frame50.png" class="frame50" /> -->
-
+    <img src="assets/images/desktop/frame50.png" class="frame50" />
     <img src="assets/icons/ellipse23.svg" alt="ellipse23" class="ellipse23">
-    <!-- <img src="assets/icons/ellipse24.svg" alt="ellipse24" class="ellipse24" />
-    <img src="assets/icons/objects(1).svg" alt="objects" class="objects1" /> -->
+    <img src="assets/icons/ellipse24.svg" alt="ellipse24" class="ellipse24" />
+    <img src="assets/icons/objects(1).svg" alt="objects" class="objects1" />
   
-    <section class="explore">
+    <section class="explore"> 
 
         <div class="explore_left">
             <div class="explore_left_title">
@@ -97,7 +96,7 @@
                 <img alt="Icon representing Best Tour Guide" src="assets/icons/destination1.svg" alt="destination1" />
                 <h5>Best Tour Guide</h5>
                 <p>What looked like a small patch of purple grass, above five feet.</p>
-
+ 
             </div>
             <div class="card1">
                 <img alt="Icon representing Best Tour Guide" src="assets/icons/booking1.svg" alt="booking1" />
@@ -200,10 +199,10 @@
                     </div>
                 </div>
 
-            </div> 
+            </div>  
         </div>
-     </section> 
-
+     </section>  
+ 
     <section class="travelpoint">
         <img src="assets/images/desktop/group9238.png" alt="group9238" class="travelpoint_image">
 
@@ -318,7 +317,7 @@
                 </div> 
      
                 <figure class="testimonials_main_content_image">
-                    <img src="assets/icons/ellipse22.svg" alt="avatar">
+                    <img src="assets/icons/ellipse222.svg" alt="avatar">
                 </figure>      
  
                 <div class="testimonials_main_content_star">
