--- a/src/stylesheet/pages/home/_destinations.scss
+++ b/src/stylesheet/pages/home/_destinations.scss
@@ -186,7 +186,7 @@
       display: flex;
       align-items: flex-start;
       gap: 1.9375rem;
-      margin: 0 4rem;
+      margin: 0 auto;
       width: 100%;
 
 
@@ -225,7 +225,7 @@
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-          margin: 2rem;
+          margin: 0 2rem;
 
 
           .card{
